chore: cleaning project + adding svg visualizer part + interactive calls to get node infos + persistence part + add unsecure access + update openapi interface + update ExceptionHandler
